# nav

./: .gitignore  CMakeLists.txt  PROJECT_CONTEXT.md  deepseek.md  navigation_service_change.diff  package.xml
.trash/navigation_cleanup_20260629/install_maps_blackW/: obstable.xml  scene.xml  scene_obstacle_rule_mirror_lr.xml  scene_robocon.xml
.trash/navigation_cleanup_20260629/install_points/: 505nav.yaml  add_fast.yaml  cali505.yaml  fixgap.yaml  new_points.yaml  obs.yaml  obstable.yaml  route1.yaml  smooth.yaml
.trash/navigation_cleanup_20260629/maps_blackW/: scene_obstable.xml  scene_obstacle_rule.xml
.trash/navigation_cleanup_20260629/points/: 1.yaml  clear.yaml
arm_integration/: README.md
config/: manual_tuning.yaml  ui_state.yaml
config/calibration/cali_params/: 505center__to__cali505.yaml  aright2__to__a.yaml  dimian__to__a.yaml  left__to__a.yaml  obstable__to__aa.yaml  radar_points__to__cali505.yaml  right2__to__a.yaml
config/calibration/datas/: 505center.yaml  dimian.yaml  dimian_left.yaml  left.yaml  obstable.yaml  radar_points.yaml  right2.yaml
config/maps/blackW/: blackW_description.mjcf.xml  blackW_description.urdf  blackW_description.xml  kfs.xml  kfs_dep.xml  scene_flat.xml  scene_task.xml  scene_terrain.xml
config/maps/blackW/meshes/: FL_calf.STL  FL_foot.STL  FL_hip.STL  FL_thigh.STL  FR_calf.STL  FR_foot.STL  FR_hip.STL  FR_thigh.STL  RL_calf.STL  RL_foot.STL  RL_hip.STL  RL_thigh.STL  (+5 more)
config/mission/: map_geom.yaml  plot_map_geom.py
config/params/Sequential_Waypoint/: faster.yaml  navigation_params.yaml
config/points/: 1.yaml  2.yaml  a.yaml  entir1.yaml  entir2.yaml  gaoqiang.yaml  louti.yaml  obs.yaml  raogan.yaml  rout2.yaml  shaken.yaml  shangban.yaml  until_shaken.yaml  xiaban.yaml  zry.yaml
config/points/left/: 1.yaml  2.yaml  a.yaml  entir2.yaml  entir3-raoganweitiao.yaml  entir3.yaml  entir_left.yaml  gaoqiang.yaml  louti.yaml  obs.yaml  raogan.yaml  raogan_zha.yaml  shaken-gaoqiang.yaml  shaken-louti.yaml  shaken.yaml  shaken_and_raogan.yaml  shangban.yaml  until_raogan.yaml  until_shaken.yaml  wall.yaml
config/points/right/: 1.yaml  2.yaml  a.yaml  entir2.yaml  entir3-raoganweitiao.yaml  entir_left.yaml  louti.yaml  obs.yaml  raogan.yaml  raogan_zha.yaml  shaken-gaoqiang.yaml  shaken_and_raogan.yaml  until_raogan.yaml  until_shaken.yaml  wall.yaml
include/: controller.hpp  interface.hpp
include/app/: navigation_map_node.hpp  navigation_mouse_controller.hpp  navigation_node_context.hpp  navigation_points_workflow.hpp  navigation_runtime.hpp  navigation_ui_coordinator.hpp
include/calibration/: kabsch.hpp  radar_calibration.hpp
include/interface/: radar_pose_listener.hpp
include/keyboards/: navigation_input_handler.hpp  navigation_keys.hpp
include/maps/: navigation_map_helpers.hpp  point_store.hpp  top_view_map.hpp
include/optim/: task_order_planner.hpp
include/params/: navigation_params.hpp
include/ui/: map_ui_renderer.hpp  map_ui_types.hpp  navigation_ui_state.hpp  window_scroll_controller.hpp
launch/: mujoco_navigation.launch.py  navigation.launch.py
msg/: MapPoint.msg
scripts/: mock_arm_node  navigation_core_launcher  navigation_launcher  navigation_ui_launcher
src/: navigation_core_node.cpp  navigation_node.cpp  navigation_remote_ui_node.cpp
src/app/: navigation_map_node.cpp  navigation_mouse_controller.cpp  navigation_points_workflow.cpp  navigation_runtime.cpp  navigation_ui_coordinator.cpp
src/calibration/: radar_calibration.cpp
src/calibration/kabsch/: kabsch.cpp  readme.txt
src/controller/: sequential_waypoint_controller.cpp
src/interface/: radar_interface.cpp  radar_pose_listener.cpp  simulation_interface.cpp
src/keyboards/: navigation_input_handler.cpp  navigation_keys.cpp
src/maps/: navigation_map_helpers.cpp  point_store.cpp  top_view_map.cpp
src/optim/: __init__.py  task_order_planner.cpp  task_order_planner.py
src/params/: navigation_params.cpp
src/ui/: map_ui_renderer.cpp  navigation_ui_state.cpp  window_scroll_controller.cpp
srv/: MissionCommand.srv  SetControllerConfig.srv  SetWaypoints.srv  StartNavigation.srv
